<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Welcome_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/twelcome_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/twelcome_text"
        android:layout_width="206dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/height"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tWeight"
        app:layout_constraintEnd_toStartOf="@+id/edHeight"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twelcome_text"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintHeight"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <EditText
        android:id="@+id/edWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintWeight"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toEndOf="@+id/tWeight"
        app:layout_constraintTop_toBottomOf="@+id/edHeight" />

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="354dp"
        android:layout_height="59dp"
        android:onClick="submit"
        android:text="@string/btSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edWeight"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/tSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sex"
        app:layout_constraintBottom_toTopOf="@+id/btSubmit"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tWeight"
        app:layout_constraintVertical_bias="0.582" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edWeight"
        tools:visibility="visible">

        <RadioButton
            android:id="@+id/btBoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/btGirl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Female" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>